colang-cli/tests/samples/features/traits/good/template_implementor.co
trait Foo {
  fun bar(self, x: int): int
}

struct FooImpl<T> : Foo {
  fun bar(self, x: int): int {
    x
  }
}

fun main() { }
