colang-cli/tests/samples/features/traits/compile_error/signature_mismatch.co
trait Foo {
  fun bar(self, x: int): int
}

struct FooImpl : Foo {
  fun bar(self, x: int) { }
}

fun main() { }
